force-app/main/default/objects/PreActivation__c/PreActivation__c.object-meta.xml
<CustomObject>
    <label>PreActivation</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>PreActivation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PreActivation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>