force-app/main/default/objects/PreActivation__c/fields/Contact1_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Email__c</fullName>
    <label>Authorized User #1 Email</label>
    <type>Email</type>
</CustomField>