force-app/main/default/objects/PreActivation__c/fields/Contact1_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Name__c</fullName>
    <label>Authorized User #1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>