force-app/main/default/objects/PreActivation__c/fields/Contact1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Phone__c</fullName>
    <label>Authorized User #1 Phone</label>
    <type>Phone</type>
</CustomField>