force-app/main/default/objects/PreActivation__c/fields/Contact2_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Email__c</fullName>
    <label>Authorized User #2 Email</label>
    <type>Email</type>
</CustomField>