force-app/main/default/objects/PreActivation__c/fields/Contact2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Phone__c</fullName>
    <label>Authorized User #2 Phone</label>
    <type>Phone</type>
</CustomField>