force-app/main/default/objects/PreActivation__c/fields/Contact3_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact3_Email__c</fullName>
    <label>Authorized User #3 Email</label>
    <type>Email</type>
</CustomField>