force-app/main/default/objects/PreActivation__c/fields/Contact3_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact3_Name__c</fullName>
    <label>Authorized User #3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>