force-app/main/default/objects/PreActivation__c/fields/Contact3_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact3_Phone__c</fullName>
    <label>Authorized User #3 Phone</label>
    <type>Phone</type>
</CustomField>