force-app/main/default/objects/PreActivation__c/fields/Number_of_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units__c</fullName>
    <label>How many units?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>