force-app/main/default/objects/PreActivation__c/fields/Number_of_users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_users__c</fullName>
    <label>Number of authorized users wanted?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>