force-app/main/default/objects/PreActivation__c/fields/PMS_Requirements__c.field-meta.xml
<CustomField>
    <fullName>PMS_Requirements__c</fullName>
    <label>What are you looking for out of the PMS?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>