force-app/main/default/objects/PreActivation__c/fields/Property_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_3__c</fullName>
    <label>Property Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>