force-app/main/default/objects/PreActivation__c/fields/Questions_about_product__c.field-meta.xml
<CustomField>
    <fullName>Questions_about_product__c</fullName>
    <label>Any questions about our product?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>